package org.xmlToDb.strategies;

public interface XmlHandler {
    void handle(String xmlContent, String schemaPath);
}
